Added images for unit 2 and 3

--- a/docs/.unit3.md
+++ b/docs/.unit3.md
@@ -35,7 +35,7 @@ When working with Git, there are 4 fundamental elements: **Working Directory, St
 - **Local Repo** - Your local repo is stored on your computer, and is a clone of the Remote Repo.
 - **Remote Repo** - The remote repo is the repository, but it’s stored on a server miles away (such as GitHub).
 
-![Git Workflow Image](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b2b4c646-12fe-4373-a3bb-2d498724951b/Untitled.png)
+![Git Workflow Image](../static/img/unit3/git-workflow.png)
 
 ### Git Commands
 
