Change md to mdx, so we can use react inside
- Made a Video component that will not take up more than 100% of the video. This prevents overflow on mobile.
- Made assignment tasks a <ul> to support nested
- Updated due date
- Made submission form 100% width
- Made submission form height larger, so there's no internal scroll bar

--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -1,6 +1,9 @@
 ---
 sidebar_position: 1
+sidebar_label: "Unit 1: GitHub Setup"
 ---
+
+import Video from '@site/src/components/Video';
 
 # Unit 1: Git-ing GitHub Setup
 
@@ -10,7 +13,7 @@ This week we are going to briefly cover GitHub, READMEs, Markdown, and GitHub Pr
 
 ## Unit 1 Lecture Video
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bJKevRR554o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe>
+<Video url="https://www.youtube.com/embed/bJKevRR554o" />
 
 ## GitHub
 
@@ -106,27 +109,35 @@ Here’s a guide on [creating your GitHub profile README](https://docs.github.co
 
 **Required Tasks**
 
-- [ ]  Create a GitHub Account
-- [ ]  Create a Profile README with:
-- [ ]  A header
-- [ ]  At least 300 characters
-- [ ]  At least one instance of Bold or Italics text
-- [ ]  At least one external link
+<ul>
+    <li>Create a GitHub Account</li>
+    <li>
+        Create a Profile README with:
+        <ul>
+            <li>A header</li>
+            <li>At least 300 characters</li>
+            <li>At least one instance of Bold or Italics text</li>
+            <li>At least one external link</li>
+        </ul>
+    </li>
+</ul>
 
 **Optional** **Stretch Goals**
 
-- [ ]  Add a name, description, and profile picture to your GitHub account
-- [ ]  Add an image in your Profile README
+<ul>
+    <li>Add a name, description, and profile picture to your GitHub account</li>
+    <li>Add an image in your Profile README</li>
+</ul>
 
 ### Due Date
 
-Monday, January 10 by 11:59pm
+Monday, April 11 by 11:59pm
 
 ### Submission
 
 Complete the [Google Form](https://forms.gle/ve16FzUfq57HsyUi6). Please use your UCI email. 
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0A1aXDnppcJQnmMDrDAKw4WZyq2ot8JS5mOFGGnl0hU0ncg/viewform?embedded=true" width="640" height="1056" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0A1aXDnppcJQnmMDrDAKw4WZyq2ot8JS5mOFGGnl0hU0ncg/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 ## External Resources
 
