Change md to mdx and other fixes

--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -1,6 +1,9 @@
 ---
 sidebar_position: 2
+sidebar_label: "Unit 2: Touching the Terminal"
 ---
+
+import Video from '@site/src/components/Video';
 
 # Unit 2: Touching the Terminal
 
@@ -10,7 +13,7 @@ In this unit, we will be going over how to use the terminal, or you may know it 
 
 ## Unit 2 Lecture Video
 
-<iframe width="560" height="315" src="https://youtube.com/embed/KAKWE1xj_II" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe>
+<Video url="https://youtube.com/embed/KAKWE1xj_II"/>
 
 ## Terminal
 
@@ -195,24 +198,22 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 ### Deliverables
 
 **Required Tasks**
-
-- [ ]  Follow the directions above to set up your project directory. Take a screenshot and post it in the announcements thread.
-- [ ]  Complete the [Quiz](https://forms.gle/1whc3n6FjNNoq5ye9)
+ - Follow the directions above to set up your project directory. Take a screenshot and post it in the announcements thread.
+ - Complete the [Quiz](https://forms.gle/1whc3n6FjNNoq5ye9)
 
 **Optional** **Stretch Goals**
-
-- [ ]  Head to [Vim Adventures](https://vim-adventures.com/) and try to beat the puzzles! What object comes out of the final chest?
-- [ ]  Add some custom code to your .bashrc or .zshrc
+ - Head to [Vim Adventures](https://vim-adventures.com/) and try to beat the puzzles! What object comes out of the final chest?
+ - Add some custom code to your .bashrc or .zshrc
 
 ### Due Date
 
-Monday, January 17 by 11:59pm
+Monday, April 11 by 11:59pm
 
 ### Submission
 
 Send your screenshot in the Discord channel and complete [the quiz](https://forms.gle/huFVCdN48dcfty256) for this week.
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3Mrv8_RShKjSLfD-th7L0LrNWVyXjtfEuQzz_EWMFhwGHQ/viewform?embedded=true" width="640" height="1056" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3Mrv8_RShKjSLfD-th7L0LrNWVyXjtfEuQzz_EWMFhwGHQ/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 ## External Resources
 
