Fixed more videos

--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -111,9 +111,9 @@ To save and exit the file, you will be using two commands. Ctrl + O, saves the f
 
 ## Bonus Lecture - Bash
 
-<iframe width="560" height="315" src="https://youtube.com/embed/bwqw-CwC6hI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<Video url="https://youtube.com/embed/bwqw-CwC6hI"/>
 
-<iframe width="560" height="315" src="https://youtube.com/embed/I4EWvMFj37g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<Video url="https://youtube.com/embed/I4EWvMFj37g"/>
 
 
 ### .bashrc
