Change list to md

--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -108,26 +108,18 @@ Here’s a guide on [creating your GitHub profile README](https://docs.github.co
 ### Deliverables
 
 **Required Tasks**
-
-<ul>
-    <li>Create a GitHub Account</li>
-    <li>
-        Create a Profile README with:
-        <ul>
-            <li>A header</li>
-            <li>At least 300 characters</li>
-            <li>At least one instance of Bold or Italics text</li>
-            <li>At least one external link</li>
-        </ul>
-    </li>
-</ul>
+ - Create a GitHub Account
+ - Create a Profile README with:
+   - A header
+   - At least 300 characters
+   - At least one instance of Bold or Italics text
+   - At least one external link
 
 **Optional** **Stretch Goals**
 
-<ul>
-    <li>Add a name, description, and profile picture to your GitHub account</li>
-    <li>Add an image in your Profile README</li>
-</ul>
+ - Add a name, description, and profile picture to your GitHub account
+ - Add an image in your Profile README
+
 
 ### Due Date
 
