--- a/docs/.unit10.md
+++ b/docs/.unit10.md
@@ -58,14 +58,14 @@ They might request additional changes before they approve your code and merge it
 
 ## Assignment
 
-Your final task for the Fellowship will be to make a contribution to one of the [ICSSC Projects](https://github.com/icssc-projects)!
+Your final task for the Fellowship will be to make a contribution to one of the [ICSSC Projects](https://github.com/icssc)!
 We’ve set aside some simple issues with the `Fellowship` tag for y’all to work on.
 
-- [AntAlmanac Issues](https://github.com/icssc-projects/AntAlmanac/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [PeterPortal API Issues](https://github.com/icssc-projects/peterportal-public-api/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [PeterPortal Client Issues](https://github.com/icssc-projects/peterportal-client/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- [Zotistics Issues](https://github.com/icssc-projects/Zotistics/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
-- ✨ NEW ✨ [Fellowship Website Issues](https://github.com/icssc-projects/fellowship/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- [AntAlmanac Issues](https://github.com/icssc/AntAlmanac/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- [PeterPortal API Issues](https://github.com/icssc/peterportal-public-api/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- [PeterPortal Client Issues](https://github.com/icssc/peterportal-client/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- [Zotistics Issues](https://github.com/icssc/Zotistics/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
+- ✨ NEW ✨ [Fellowship Website Issues](https://github.com/icssc/fellowship/issues?q=is%3Aissue+is%3Aopen+label%3Afellowship)
 
 Once you’ve found an issue that you like, leave a comment on it to claim the task. You are only allowed to do one issue with the `Fellowship` tag because we want to make sure there are enough tasks for everyone.
 
