Rename md to mdx and ready Unit 3 for release  - Use Video Component for Video Embed  - Updated due date  - Made submission form larger, so there's no scroll bar

--- a/docs/unit3.mdx
+++ b/docs/unit3.mdx
@@ -1,6 +1,9 @@
 ---
 sidebar_position: 3
+sidebar_label: "Unit 3: Git Basics"
 ---
+
+import Video from '@site/src/components/Video';
 
 # Unit 3: Git Basics
 
@@ -10,7 +13,7 @@ This week, we’ll be combining what we’ve done in the past 2 weeks, to learn 
 
 ## Unit 3 Lecture Video
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jFhAPcxPEfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe>
+<Video url="https://www.youtube.com/embed/jFhAPcxPEfs" />
 
 ## Git
 
@@ -136,36 +139,34 @@ If you used the ed25519 algorithm to create your key, you should see 2 files:
 
 **Required Tasks**
 
-- [ ]  Add your SSH Key to GitHub
-- [ ]  Clone your Profile README and push some changes (at least 1 new commit).
-- [ ]  Create a new repository for your personal website.
-    - [ ]  Create an `index.html` file
-    - [ ]  Create a `README.md` file (it’s ok if there’s not much in there for now)
+-  Add your SSH Key to GitHub
+-  Clone your Profile README and push some changes (at least 1 new commit).
+-  Create a new repository for your personal website.
+    -  Create an `index.html` file
+    -  Create a `README.md` file (it’s ok if there’s not much in there for now)
 
 **Optional** **Stretch Goals**
 
-- [ ]  Create a `.gitignore` file in your personal website repo.
-- [ ]  Add your SSH Key to OpenLab
+-  Create a `.gitignore` file in your personal website repo.
+-  Add your SSH Key to OpenLab
 To do this: [connect to OpenLab](https://gist.github.com/ChaseC99/9506cf219ca33c60693ea4c4396a4c19) and add your public ssh key as a newline in `.ssh/authorized_keys`
 
 ### Due Date
 
-Monday, January 24 by 11:59pm
+Monday, February 18 by 11:59pm
 
 ### Submission
 
 Complete [Google Form](https://forms.gle/6MmqvLtr4YLWVhZV8).
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRh6buY0w8TXrVPmjbXhKJ1gf0Kj-jVdidq4ftt2wfkC7fjg/viewform?embedded=true" width="640" height="1056" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRh6buY0w8TXrVPmjbXhKJ1gf0Kj-jVdidq4ftt2wfkC7fjg/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 ## External Resources
 
 Git
-
 - [Git Reference](https://git-scm.com/docs)
 - Git Cheat Sheet: [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
 
 SSH
-
 - How to create a new SSH Key: [Create SSH Key Documentation](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
 - How to add an SSH Key to GitHub: [Add SSH Key Documentation](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account)
