Change video url prop to src

--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -13,7 +13,7 @@ In this unit, we will be going over how to use the terminal, or you may know it 
 
 ## Unit 2 Lecture Video
 
-<Video url="https://youtube.com/embed/KAKWE1xj_II"/>
+<Video src="https://youtube.com/embed/KAKWE1xj_II"/>
 
 ## Terminal
 
@@ -111,9 +111,9 @@ To save and exit the file, you will be using two commands. Ctrl + O, saves the f
 
 ## Bonus Lecture - Bash
 
-<Video url="https://youtube.com/embed/bwqw-CwC6hI"/>
+<Video src="https://youtube.com/embed/bwqw-CwC6hI"/>
 
-<Video url="https://youtube.com/embed/I4EWvMFj37g"/>
+<Video src="https://youtube.com/embed/I4EWvMFj37g"/>
 
 
 ### .bashrc
