--- a/docs/unit3.mdx
+++ b/docs/unit3.mdx
@@ -13,7 +13,7 @@ This week, we’ll be combining what we’ve done in the past 2 weeks, to learn 
 
 ## Unit 3 Lecture Video
 
-<Video url="https://www.youtube.com/embed/jFhAPcxPEfs" />
+<Video src="https://www.youtube.com/embed/jFhAPcxPEfs" />
 
 ## Git
 
