--- a/docs/unit4.mdx
+++ b/docs/unit4.mdx
@@ -13,12 +13,12 @@ This week we'll get started on your personal website and cover the basics of HTM
 
 ## Unit 4 Lecture Video
 
-<Video url="https://www.youtube.com/embed/45teq99E4DA" />
+<Video src="https://www.youtube.com/embed/45teq99E4DA" />
 
 ### Fireship Videos
 Take 200 seconds to check out these videos from Fireship for an even a better understanding of HTML and CSS.
-<Video url="https://www.youtube.com/embed/ok-plXXHlWw" />
-<Video url="https://www.youtube.com/embed/OEV8gMkCHXQ" />
+<Video src="https://www.youtube.com/embed/ok-plXXHlWw" />
+<Video src="https://www.youtube.com/embed/OEV8gMkCHXQ" />
 
 ## VS Code
 Before we get started developing websites, we need somewhere to write our code!
@@ -284,7 +284,7 @@ Flexbox has a lot of powerful options. Here are a few from the [Flexbox Properti
 | [<img src="/img/unit4/flex/rows-cols.png" alt="Flex Direction Example" style={{height: "200px"}}/>](https://css-tricks.com/snippets/css/a-guide-to-flexbox/#aa-flex-direction) | [<img src="/img/unit4/flex/justify-content.png" alt="Justify Content Types" style={{height: "400px"}}/>](https://css-tricks.com/snippets/css/a-guide-to-flexbox/#aa-justify-content)| [<img src="/img/unit4/flex/align-items.png" alt="Align Items Types" style={{height: "400px"}} />](https://css-tricks.com/snippets/css/a-guide-to-flexbox/#aa-align-items) |
 
 Fireship has another great video explaining Flexbox and how to size and align the child elements.
-<Video url="https://www.youtube.com/embed/K74l26pE4YA" />
+<Video src="https://www.youtube.com/embed/K74l26pE4YA" />
 
 ## GitHub Pages
 
