--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -13,7 +13,7 @@ This week we are going to briefly cover GitHub, READMEs, Markdown, and GitHub Pr
 
 ## Unit 1 Lecture Video
 
-<Video url="https://www.youtube.com/embed/bJKevRR554o" />
+<Video src="https://www.youtube.com/embed/bJKevRR554o" />
 
 ## GitHub
 
