--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -24,7 +24,7 @@ Create an account at [https://github.com/signup](https://github.com/signup)
 
 ## README.md
 
-Every project you make should have a README. The README is the first thing that people will see when they look at your project on GitHub; it’s your opportunity to make a good impression!
+Every project you make should have a README. The README is the first thing that people will see when they look at your project on GitHub; it's your opportunity to make a good impression!
 
 Project READMEs should usually have the following:
 
@@ -70,13 +70,13 @@ To create a newline, you have two options:
 
 | Text | Markdown |
 | --- | --- |
-| `This is a line.`<br/>`But it doesn’t have 2 spaces on the end.` | `This is a line. But it doesn't have two 2 on the end.` |
-| <code>This line DOES have 2 spaces. &nbsp;&nbsp;</code><br/>`So it’s on a newline!` | `This line DOES have 2 spaces.`<br/>`So it’s on a newline!` |
+| `This is a line.`<br/>`But it doesn't have 2 spaces on the end.` | `This is a line. But it doesn't have two 2 on the end.` |
+| <code>This line DOES have 2 spaces. &nbsp;&nbsp;</code><br/>`So it's on a newline!` | `This line DOES have 2 spaces.`<br/>`So it's on a newline!` |
 | `This has an extra newline`<br/>`‎` <br/>`So it works too!` | `This has an extra newline` <br/>`So it works too!` |
 
 ### Images
 
-You can also include images in a README! There’s a few ways to do this:
+You can also include images in a README! There's a few ways to do this:
 
 - Reference the URL of an image `![Alt text for the image](https://url_foreurl.com)`
 - Reference a file in your folder `![Alt text for the image](/images/mypic.png)`
@@ -84,7 +84,7 @@ You can also include images in a README! There’s a few ways to do this:
 
 ### + More!
 
-There’s WAY more that you can do with Markdown. Take a minute to look through [GitHub’s Markdown Guide](https://docs.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax) and checkout all the cool things you can do with Markdown!
+There's WAY more that you can do with Markdown. Take a minute to look through [GitHub's Markdown Guide](https://docs.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax) and checkout all the cool things you can do with Markdown!
 
 Can you figure out how to add quotes or multiline code?
 
@@ -103,7 +103,7 @@ Some people get really fancy with these. Here are a few [Awesome GitHub Profile 
 Your assignment this week is to create a [GitHub account](https://github.com/signup) and add a GitHub Profile README. 
 Already have one? Great! You can relax this week or continue to improve it.
 
-Here’s a guide on [creating your GitHub profile README](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme). 
+Here's a guide on [creating your GitHub profile README](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme). 
 
 ### Deliverables
 
@@ -137,7 +137,7 @@ Complete the [Google Form](https://forms.gle/ve16FzUfq57HsyUi6). Please use your
     - [About READMEs](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-readmes)
 - Markdown
     - [Markdown Guide Cheatsheet](https://www.markdownguide.org/cheat-sheet/)
-    - [GitHub’s Markdown Guide](https://docs.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
+    - [GitHub's Markdown Guide](https://docs.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
 - GitHub Profile README
     - [Creating your profile README Guide](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme)
     - [Awesome GitHub Profile README Examples](https://abhisheknaiidu.github.io/awesome-github-profile-readme/)
