--- a/docs/unit5.mdx
+++ b/docs/unit5.mdx
@@ -32,7 +32,7 @@ Your resume should have the following parts:
     - GPA if above a 3.0
 - Work Experience and/or Leadership Experience
     - Position
-    - Date range of involvement (June 2021-September 2021)
+    - Date range of involvement (e.g. June 2021-September 2021)
     - Position and description of accomplishments
 - Projects
     - Languages/frameworks used
@@ -41,31 +41,31 @@ Your resume should have the following parts:
 
 ### Do's and Don'ts
 
-<div style={{display: "flex", flexDirection: "row", gap: "3em", flexWrap: "wrap"}}>
+<div style={{display: "flex", flexDirection: "row", justifyContent: "space-between", flexWrap: "wrap"}}>
   <div>
-    <b>Should</b> include
+    Your resume <b>should</b> include:
     <ul>
-    <li>Name</li>
-    <li>Phone and non-edu email</li>
-    <li>LinkedIn, GitHub, Website</li>
-    <li>
-        Education
-        <ul>
-          <li>“University of California, Irvine”</li>
-          <li>Major</li>
-          <li>Graduation date</li>
-          <li>[Optional] GPA if above a 3.0</li>
-        </ul>
-    </li>
-    <li>Work Experience</li>
-    <li>Personal Projects</li>
-    <li>Leadership Experience</li>
-    <li>[Optional] Skills</li>
-    <li>[Optional] Relevant coursework</li>
+      <li>Name</li>
+      <li>Phone and non-edu email</li>
+      <li>LinkedIn, GitHub, Website</li>
+      <li>
+          Education
+          <ul>
+            <li>“University of California, Irvine”</li>
+            <li>Major</li>
+            <li>Graduation date</li>
+            <li>[Optional] GPA if above a 3.0</li>
+          </ul>
+      </li>
+      <li>Work Experience</li>
+      <li>Personal Projects</li>
+      <li>Leadership Experience</li>
+      <li>[Optional] Skills</li>
+      <li>[Optional] Relevant coursework</li>
     </ul>
   </div>
   <div>
-    Should <b>NOT</b> include
+    Your resume should <b>NOT</b> include:
     <ul>
       <li>Profile picture</li>
       <li>Protected categories (race, gender, sexuality, etc.)</li>
@@ -81,33 +81,47 @@ Your resume should have the following parts:
 
 ### Tips
 
-Content Tips
-
-- Use bullet points, not paragraphs
-    - Get to the point
-- Use the [XYZ Formula](https://www.inc.com/bill-murphy-jr/google-recruiters-say-these-5-resume-tips-including-x-y-z-formula-will-improve-your-odds-of-getting-hired-at-google.html)
-    - Accomplished [X], as measured by [Y], by doing Z
-- Add lots of stats/numbers. Recruiters love stats!
-- Cater to your audience
-- Check for Grammar
-
-Design Tips
-
-- 1 page, single column
-- Clean, simple, and consistent
-- Use the same font/font sizes
-- Save as PDF
-- Balance between text and white space
-- You can make the margins smaller if you need more room
+<div style={{display: "flex", flexDirection: "row", justifyContent: "space-between", flexWrap: "wrap"}}>
+  <div>
+    Content Tips
+    <ul>
+      <li>
+        Use bullet points, not paragraphs
+        <ul>
+          <li>Get to the point</li>
+        </ul>
+      </li>
+      <li>
+        Use the <a href="https://www.inc.com/bill-murphy-jr/google-recruiters-say-these-5-resume-tips-including-x-y-z-formula-will-improve-your-odds-of-getting-hired-at-google.html" target="_blank">XYZ Formula</a>
+        <ul>
+          <li>Accomplished [X], as measured by [Y], by doing Z</li>
+        </ul>
+      </li>
+      <li>Add lots of stats/numbers. Recruiters love stats!</li>
+      <li>Cater to your audience</li>
+      <li>Check for grammar</li>
+    </ul>
+  </div>
+  <div>
+    Design Tips
+    <ul>
+      <li>1 page, single column</li>
+      <li>Clean, simple, and consistent</li>
+      <li>Use the same font/font sizes</li>
+      <li>Save as PDF</li>
+      <li>Balance between text and white space</li>
+      <li>You can make the margins smaller if you need more room</li>
+    </ul>
+  </div>
+</div>
 
 ### Adding your Resume to your website
 
-To get your resume onto your website, export your resume as a `.pdf` file. 
+Now that you have a resume, let's add it to your website!  
+First, export your resume as a `.pdf` file. 
+There are two ways to add this `.pdf` file to your website:
 
-There are two ways to add it to your website.
-
-You can either commit it to your project and push
-
+**[Option 1]** You can either commit it to your project and push
 ```bash
 mv <path to resume> chasec99.github.io/resume.pdf
 cd chasec99.github.io
@@ -117,22 +131,28 @@ git commit -m "Add resume"
 
 OR
 
-Go to your repo's GitHub page and upload the resume.pdf file
+**[Option 2]** Go to your repo's GitHub page and upload the resume.pdf file
 ![Uploading a file to GitHub](../static/img/unit5/github-upload.png)
 
 ### Redirecting from GitHub's 404 page
 
 You can access your resume by going to `username.github.io/resume.pdf`. 
 
-But what happens if someone goes to `username.github.io/resume` without `.pdf` on the end? You'll get a 404 error! This is because GitHub doesn't know where to send the user when they don't include the file extension. 
+But what happens if someone goes to `username.github.io/resume` without `.pdf` on the end? You'll get a 404 error!
+This is because GitHub doesn't know where to send the user when they don't include the file extension. 
 
-However, we can provide our own 404 page and have it immediately redirect to the desired location. The idea is this:
+However, we can provide our own 404 page and have it immediately redirect to the desired location. 
+The idea is this:
 
 - User goes to `username.github.io/resume`
 - GitHub returns `username.github.io/404.html`
 - The 404.html page sees that the user attempted to go to `resume` and immediately redirects to `username.github.io/resume.pdf`
 
-Add your own `404.html` file to your project. Instead of the head add a `<script>` tag with code similar to the one below. The code instead of the `<script>` tag gets executed on page load.
+This all happens so fast, that the user will never actually see the 404 page.
+
+Add your own `404.html` file to your project. 
+Inside of the head add a `<script>` tag with code similar to the one below. 
+The code inside of the `<script>` tag gets executed on page load.
 
 ```html
 <!DOCTYPE html>
@@ -159,8 +179,8 @@ Add your own `404.html` file to your project. Instead of the head add a `<script
         // Redirect to the desired location
         window.location.replace(redirect);
       } else {
-        // If the path doesn't exist, you can redirect to your main page or
-        // you can remove this line of code if you just want to show the 404 page.
+        // If the path doesn't exist, you can redirect to your main page
+        // or you can remove this line of code if you just want to show the 404 page.
         window.location.replace("https://www.chasecarnaroli.com"); // TODO: add your website
       }
     </script>
@@ -188,7 +208,7 @@ By default your LinkedIn URL is your name+random characters. This looks unprofes
 
 ## Assignment
 
-These week, your assignment is to create a resume and a LinkedIn.
+This week, your assignment is to create a resume and a LinkedIn.
 
 ### Deliverables
 
@@ -217,7 +237,7 @@ Monday, May 2 by 11:59pm
 Complete the [Google Form](https://docs.google.com/forms/d/e/1FAIpQLSe346dTGIyWBqGoFc3XNKbrXh5Aks2hsI5ME9ZDVbsGMWYWXQ/viewform?usp=sf_link).
 Please use your UCI email. 
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe346dTGIyWBqGoFc3XNKbrXh5Aks2hsI5ME9ZDVbsGMWYWXQ/viewform?embedded=true" width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe346dTGIyWBqGoFc3XNKbrXh5Aks2hsI5ME9ZDVbsGMWYWXQ/viewform?embedded=true" width="100%" height="1800" frameBorder="0" marginHeight="0" marginWidth="0">Loading…</iframe>
 
 ## External Resources
 
